--- a/index.html
+++ b/index.html
@@ -107,23 +107,34 @@
     <div class="container">
         <h2>Исследование траекторий взросления<br>Шкалы самооценки</h2>
         <div class="description">
-            Перед тобой две шкалы с бегунками:
+Перед Вами две шкалы с бегунками:
+
 
 <br>1. Шкала «Человек, который хочет стать взрослым – не хочет становиться взрослым»
 
+
 <br>2. Шкала «Взрослый – Ребенок»
+
 <br>
+
 <br>В каждой шкале есть два столбца с бегунками:
 
-<br>Левый столбец – отражает, как ты видишь себя сейчас.
 
-<br>Правый столбец – отражает, каким ты хотел бы быть в идеале.
-<br>
-<br>Чем ближе бегунок к одному из концов, тем больше ты считаешь, что это про тебя.
+<br>Левый столбец – отражает, как Вы видите себя сейчас.
 
-<br>После того, как бегунки будут расставлены, нажми кнопку «Показать результаты». Затем скопируй появившиеся данные и вставь их в гугл-форму.
+
+<br>Правый столбец – отражает, каким Вы хотели бы быть в идеале.
 <br>
-<br>Спасибо за участие!
+
+
+<br>Чем ближе бегунок к одному из концов, тем больше Вы считаете, что это про Вас.
+
+
+<br>После того, как бегунки будут расставлены, нажмите кнопку «Показать результаты». Затем скопируйте появившиеся данные и вставьте их в гугл-форму.
+
+<br>
+
+<br>Спасибо за участие
         </div>
         <div class="rlrs">
             <div class="slider-block">
